fix anchor covered by header issue

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -254,3 +254,10 @@ table {
     border: 1px solid $grey-color-light;
   }
 }
+
+/**
+ * fix anchor covered by header issue
+ */
+ :target{
+   padding-top: $header-height;
+ }
